2006-04-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wingdi.h [WINVER >= 0x0410]
	(AlphaBlend,GradientFill,TransparentBlt): Windows 98 and better.
	Thanks to:    Alessandro Antonello <aleantonello at users dot sf dot net>

2006-04-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wingdi.h (CAPTUREBLT,NOMIRRORBITMAP): Define.
	* include/commctrl.h (WC_LINK{AW},LIF_*,LIM_*,LM_*,
	MAX_LINKID_TEXT,L_MAX_URL_LENGTH): Define.
	(LITEM,LHITTESTINFO,NMLINK): Add structures.
	Thanks to:    Brandon Sneed <brandon at redf dot net>

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/w32api.h (IE*): Define for recent versions of IE.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/w32api.h (_W32API_H): Define.
	Define in addition to _W32API_H_, this is the w32api standard.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/w32api.h (WindowsVista): Define.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/iptypes.h (IP_ADAPTER_*): Define parts that depend
	on SOCKET_ADDRESS only if winsock2.h has already been included.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (WM_IME_*): Remove. Defined in imm.h.

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/iphlpapi.h (GAA_FLAG_*): Define.
	(GetAdaptersAddresses): Add function declaration.
	* lib/iphlpapi.def (GetAdaptersAddresses): Add function stub.
	Thanks to:    ross <rossboulet at users dot sf dot net>

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/iptypes.h (IP_INTERFACE_NAME_INFO,
	IP_ADAPTER_ANYCAST_ADDRESS,IP_ADAPTER_MULTICAST_ADDRESS,
	IP_ADAPTER_UNICAST_ADDRESS,IP_ADAPTER_DNS_SERVER_ADDRESS,
	IP_ADAPTER_PREFIX,IP_ADAPTER_ADDRESSES): Add structures.
	(IF_OPER_STATUS,IP_DAD_STATE,IP_PREFIX_ORIGIN,IP_SUFFIX_ORIGIN,
	SCOPE_LEVEL): Add enums.